# pod-ndots-policy

./: Cargo.toml  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: pod_with_5_ndots.json  settings-5-ndots.yaml
